@startuml

class Document {
    - hash: str
    - uri: str
    - source: str
    - mime_type: str
    - file_bytes: bytes
    - storage_uri: str    
    - doc_meta: dict[str, str]
    
}

class DocumentURIHistory {
    - doc_id : int
    - document_hash : str
    - action_date: datetime
    - action: str
    - version: int
    - uri_history: list[str]
    - hist_meta: dict[str,str]
}

class DocumentURI {
    - id :int
    - uri: str
    - source: str
    - version: int    
    - doc_hash: str
}

DocumentURI *-- Document :  doc_hash
DocumentURI --* DocumentURIHistory :  doc_id


@enduml

